scribbu News -- history of user-visible changes -*- outline -*-

* Changes in scribbu 0.6

** Bug Fixes

*** Scheme function & types defined in C are now in module (scribbu)
*** fixed several bugs in `write_id3v1_tag`

  - Added a GOOPS type check ensuring the argument is truly an
    `<id3v1-tag>` instance.
  - Stopped calling `scm_null_p()` in favor of `scm_is_null()` which
    returns an int.
  - Changed `emplace_strategy::reduce_padding_evently` to
    `only_with_full_padding`. While not strictly a bug, this results
    in more intuitive behavior for Scheme callers.
*** the `split` and `rename` sub-commands no longer look for "SCRIBBU"-prefixed env vars indiscriminately

`scribbu` can parse options from the environment. The environment variables examined all have a prefix of "SCRIBBU_". If there is such a variable in the environment with such a prefix, that does not correspond to a known command-line argument, `split` & `rename` would error-out. This build fixes that.
*** fixed issue #7: scribbu popm hangs and eventually OOMs when given a playcount > 255
*** SIGSTKSZ is no longer constant

Address the fact that with glibc 2.34 SIGSTKSZ is no longer a constant; in the process, remove boost::filesystem.
*** fix bug in computation of Demerau-Levenshtein distance

See <https://github.com/sp1ff/damerau-levenshtein/issues/2>.
*** check that vectors are not empty before taking address of first element

There were a number of places in which the address of a vector's elements was passed as `&(vec[0])` without checking that `vec` was non-empty. In every case, that address was passed along with the size (e.g. `foo(&(vec[0]), vec.size())`) and so taking the address of the "first" element of an empty vector was generally harmless. That said, "Accessing a nonexistent element through [operator[]] is undefined behavior." per <https://en.cppreference.com/w/cpp/container/vector/operator_at>.
